src/styles/home.css
section {
    min-height: 100vh;
    padding-top: 100px;
    padding-bottom: 100px;
}
header {
    background-color: #fff;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 200px;
    z-index: 30;
}
header::after {
    position: absolute;
    content: '';
    bottom: 0;
    width: calc(100% - 400px);
    height: 1px;
    background-color: #344054;
}

header h2 {
    color: #344054;
    text-transform: capitalize;
}

header button {
    position: relative;
    width: 220px;
    height: 40px;
    background-color: #215ABD;
    border-radius: 20px;
}

header button span {
    background-color: #fff;
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    left: 0;
    top: 0;
    width: 40px;
    height: 40px;
    border-radius: 50%;
    border: 1px solid #215ABD;
    color: #215ABD;
    font-size: 32px;
    transition: 0.3s;
}
header button:hover {
    outline: 2px solid #215abd4c;
}
header button:hover span {
    transform: rotateZ(180deg);
}

header button p {
    color: #fff;
    font-weight: 500;
}

.portfolio {
    position: relative;
    border: 1px solid #215ABD;
    margin-top: 40px;
    margin-left: 200px;
    width: calc(100% - 400px);
    border-radius: 8px;
    padding: 40px 50px;
}
.portfolio h2 {
    position: absolute;
    left: 50px;
    top: 0;
    transform: translateY(-60%);
    color: #215ABD;
    background-color: #fff;
    padding: 0 20px;
}

.Portfolio-status {
    display: flex;
    flex-wrap: wrap;
    align-items: flex-start;
    justify-content: space-between;
    gap: 40px 400px;
}
.Portfolio-status p {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    width: fit-content;
    height: 40px;
    border-radius: 20px;
    border: 2px solid #215ABD;
}
.Portfolio-status p .title {
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 220px;
    color: #fff;
    border-radius: 20px 0 0 20px;
    transform: translateX(-1px);
    background-color: #215ABD;
}

.Portfolio-status p .data {
    width: 220px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.portfolio-chart {
    width: fit-content;
    /* height: 400px; */
    /* width: 100%; */
    margin-inline: auto;
    margin-top: 40px;
}

ul {
    margin-top: 40px;
    width: calc(100% - 800px);
    margin-inline: auto;
    list-style: none;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    gap: 50px;
}
li {
    position: relative;
    width: 100%;
    /* height: 80px; */
}
.top {
    position: absolute;
    height: 80px;
    width: 100%;
    background-color: #215ABD;
    border-radius: 8px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 40px;
    z-index: 2;
}
.top h2 {
    color: #fff;
}

.top span {
    font-size: 28px;
}

.green {
    color: #00B894;
}
.red {
    color: #D63031;
}


li button {
    position: absolute;
    color: #fff;
    font-size: 56px;
    width: 50px;
    height: 50px;
    border-radius: 50%;
    background-color: #215ABD;
    top: 55px;
    right: 100px;
    z-index: 2;
}

li button span {
    display: flex;
    align-items: center;
    justify-content: center;
    transition: 0.3s;
}
li.showen button span {
    transform: rotateZ(180deg);
}

li button::before {
    content: '';
    position: absolute;
    width: 48px;
    height: 30px;
    background-color: transparent;
    left: -33px;
    top: 53%;
    transform: rotate(5deg);
    border-top-right-radius: 60px 38px;
    box-shadow: 1px -13px #215ABD;
    border: 1px solid rgb(255, 255, 255, 0.2);
    border-color: rgb(255, 255, 255, 0.2) transparent transparent transparent;
}
li button::after {
    content: '';
    position: absolute;
    width: 48px;
    height: 30px;
    background-color: transparent;
    right: -33px;
    top: 53%;
    transform: rotate(-5deg);
    border-top-left-radius: 60px 38px;
    box-shadow: -1px -13px #215ABD;
    border: 1px solid rgb(255, 255, 255, 0.2);
    border-color: rgb(255, 255, 255, 0.2) transparent transparent transparent;
}

.content {
    position: relative;
    width: 100%;
    height: 80px;
    border-radius: 8px;
    border: 2px solid #215ABD;
    overflow-y: hidden;
    transition: 0.3s;
}

li.showen .content {
    height: 640px;
}

.info {
    position: absolute;
    top: 120px;
    left: 20px;
    width: calc(100% - 40px);
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: 40px;
}
.info p {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    width: fit-content;
    height: 40px;
    border-radius: 20px;
    border: 2px solid #215ABD;
}
.info p .title {
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0 12px;
    color: #fff;
    border-radius: 20px 0 0 20px;
    transform: translateX(-1px);
    background-color: #215ABD;
}

.chart {
    position: absolute;
    left: 20px;
    top: 180px;
    width: calc(100% - 40px);
    height: 440px;
    display: flex;
    align-items: center;
    justify-content: center;
}
.line-chart {
    height: 100%;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.info p .data {
    padding: 0 20px;
}


.add-asset {
    position: fixed;
    z-index: 20;
    width: 100%;
    height: 100vh;
    top: 0px;
    left: 0;
    z-index: 100;
    background-color: rgb(0, 0, 0, 0.0);
    backdrop-filter: blur(0.0rem);
    transform: translateX(-100%);
    transition: background-color 0.7s, backdrop-filter 0.7s;
}

.add-asset.show {
    transform: translateX(00%);
    background-color: rgb(0, 0, 0, 0.4);
    backdrop-filter: blur(0.2rem);
}

.add-asset form {
    position: absolute;
    background-color: #fff;
    top: 0%;
    left: 50%;
    transform: translate(-50%,-100%);
    width: 460px;
    height: 680px;
    border-radius: 8px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    padding: 40px 0;
    transition: 0.7s;
}
.add-asset.show form {
    top: 50%;
    transform: translate(-50%,-50%);
} 
select,
input {
    border: 1px solid #D0D5DD;
    border-radius: 8px;
    width: 380px;
    height: 50px;
    padding: 0 20px;
}

.add-asset p {
    width: 380px;
    transform: translateY(-80%);
    font-size: 12px;
}

.add-asset .price {
    position: absolute;
    top: 55%;
    left: 50%;
    transform: translate(-50%,-50%);
    color: #00B894;
}
.add-asset .stocks-amount {
    position: absolute;
    top: 45%;
    left: 50%;
    transform: translate(-50%,-50%);
    color: #00B894;
}

.cancel {
    border-radius: 8px;
    width: 380px;
    height: 50px;
    color: #344054;
    border: 1px solid #344054;
    background-color: #fff;
    margin-top: 320px;
}
.cancel:hover {
    outline: 2px solid #3440542f;
}
.add {
    width: 380px;
    height: 50px;
}

.logout {
    position: fixed;
    right: 40px;
    bottom: 40px;
    width: 160px;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 10px;
    background-color: #215ABD;
    color: #fff;
    height: 40px;
    border-radius: 20px;
}

.logout:hover {
    outline: 2px solid #215abd4c;
}

.logout span {
    display: flex;
    font-size: 20px;
}

